# CMakeSkeleton

./: CMakeLists.txt  README.md
docker/: Dockerfile  Dockerfile.arch  Dockerfile.ubuntu
lib/: CMakeLists.txt
lib/inc/: DummyLib.h
lib/src/: DummyLib.cpp
lib/test/: CMakeLists.txt
lib/test/src/: main.cpp
prj/: CMakeLists.txt
prj/inc/: DummyPrj.h  dummy.h
prj/src/: DummyPrj.cpp  dummy.cpp  main.cpp
prj/test/: CMakeLists.txt
prj/test/src/: main.cpp
src/: main.cpp
test/src/: main.cpp
